<resources>
    <string name="app_name">DigitalDucky</string>
    <string name="text_field">type here</string>
    <string name="message_field">message</string>
    <string name="submit_button">Submit</string>
    <string name="thot_train_title_field">enter the title of a new thought train here</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="password_confirm_text">Confirm Password</string>
    <string name="username_text">Username</string>
    <string name="login_button">Login</string>
    <string name="signup_text">Sign Up</string>
    <string name="menu_button">Menu</string>
    <string name="to_login">To Login Screen</string>
    <string name="wait_mess">Logging you in, please wait</string>
</resources>